--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
   }
 }
 
-apply plugin: 'native-binaries'
-apply plugin: 'ivy-publish'
+apply plugin: 'native-component'
+apply plugin: 'maven-publish'
 apply plugin: 'artifactory-publish'
 
 artifactory {
@@ -44,48 +44,30 @@ model {
 }
 
 publishing {
-  repositories {
-    ivy {
-      url "${System.env.HOME}/.ivy2/local"
-      layout 'maven'
-    }
-  }
-
   publications {
 
     platforms.each { platform ->
-      create(platform.name, IvyPublication) {
+      create(platform.name, MavenPublication) {
         def nativeBuildDir = "${buildDir}/${platform.operatingSystem.name}-${platform.architecture.name}"
 
-        module "${project.name}-${platform.name}"
+        artifactId = "${project.name}-${platform.name}"
 
         artifact("${nativeBuildDir}/avian") {
-          name "avian"
-          type "bin"
           extension "bin"
         }
 
         artifact("${nativeBuildDir}/classpath.jar") {
-          name "classpath"
-          type "jar"
+          classifier "classpath"
         }
 
         artifact("${nativeBuildDir}/binaryToObject/binaryToObject") {
-          name "binaryToObject"
-          type "bin"
+          classifier "binaryToObject"
           extension "bin"
         }
 
         artifact("${nativeBuildDir}/libavian.a") {
-          name "libavian"
-          type "a"
+          classifier "libavian"
           extension "a"
-        }
-
-        artifact("${nativeBuildDir}/generator") {
-          name "generator"
-          type "bin"
-          extension "bin"
         }
       }
     }
@@ -93,5 +75,5 @@ publishing {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.12'
+  gradleVersion = '2.0'
 }
